# lab_tutor

./: .augmentignore  .gitignore  AGENTS.md  CAA.ipynb  CHANGELOG.md  CLAUDE.md  EXTRACTION_FIX.md  FRONTEND_PROMPTS.md  GEMINI.md  README.md  THESIS4_BLUEPRINT.md  _inspect_nb.py  analyze_concept_merges.py  categorize_concepts_to_skills.py  clear_runs.py  commands  concepts_list.json  cypher_queries_examples.md  docker-compose.yml  fix-azure-env.sh  request.json  run_skill_categorization.py  skill_categorization.json
backend/: .dockerignore  CONTRACT_MAP.md  Dockerfile  ENVIRONMENT.md  README.md  arcd_train.py  batch_mastery_recompute.py  entrypoint.sh  eval_required_skills.py  main.py  pyproject.toml  test_db.py  test_regex.py
backend/app/core/: api_schemas.py  database.py  langsmith_tracing.py  neo4j.py  request_timing_middleware.py  settings.py
backend/app/providers/: storage.py
backend/arcd_agent/: __init__.py  model_registry.py
backend/arcd_agent/agents/: __init__.py  adaex.py  learnfell.py  orchestrator.py  pathgen.py  revfell.py
backend/arcd_agent/dataset/: __init__.py
backend/arcd_agent/evaluation/: __init__.py  adaex_eval.py  pathgen_eval.py
backend/arcd_agent/knowledge_graph/: __init__.py  data_loader.py  neo4j_client.py
backend/arcd_agent/llm/: __init__.py  anthropic_provider.py  factory.py  openai_provider.py
backend/arcd_agent/model/: __init__.py
backend/arcd_agent/preprocessing/: index_mapper.py  temporal_processor.py
backend/arcd_agent/skill_derivation/: __init__.py  clustering.py  embedder.py  llm_validator.py  pipeline.py  prerequisite.py
backend/arcd_serving/: README.md  __init__.py  app.py  routes.py  run.py  schemas.py  test_client.py
backend/checkpoints/: iccse2026_paper_results.json
backend/checkpoints/roma_synth_v1/: metrics_report.json  required_skills_report.json  training_history.json  vocab.json
backend/checkpoints/synthgen/: best_model.pt  metrics_report.json  training_history.json  vocab.json
backend/checkpoints/synthgen_v2/: best_model.pt  metrics_report.json  training_history.json
backend/lab_tutor_backend/: __init__.py  auth.py  database.py  models.py  schemas.py  settings.py
backend/lab_tutor_backend/routes/: __init__.py  auth.py  courses.py
backend/lab_tutor_backend/services/: blob_service.py
backend/runs/lf_llm_calibration_v2/: lf_llm_judge_results.json  lf_llm_judge_summary.json
backend/scripts/: backfill_chapter_titles.py  calibrate_pco_with_llm.py  categorize_concepts_to_skills.py  cleanup_books.py  debug_scoring.py  iccse2026_synth_orchestrate.py  iccse2026_synth_retrain.sh  writeback_arcd_embeddings.py
backend/tests/: conftest.py  test_auth.py  test_graph_sync_courses.py  test_main.py  test_neo4j_schema_init.py
backend/tests/modules/: test_agentic_analysis.py  test_analysis.py  test_book_selection.py  test_chapter_analysis.py  test_chapter_extraction_schemas.py  test_curriculum_graph.py  test_embeddability_probe.py  test_extraction_inspector.py  test_file_processing_docx.py  test_market_demand.py  (+14 more)
knowledge_graph_builder/: .env.example  ARCHITECTURE_SUMMARY.md  BENCHMARKING_STRATEGY.md  BULK_INGESTION_GUIDE.md  COMPREHENSIVE_RESEARCH_REPORT.md  DOCKER_SETUP.md  INGESTION_README.md  PRODUCTION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  complete_neo4j_export_no_embeddings.json  demo_complete_export.json  demo_summary_export.json  docker_ingest.py  generate_quiz.py  generate_thesis_report.py  ingest_data.sh  ingest_extracted_data.py  main.py  main_batch.py  notebook.ipynb  pyproject.toml  run_extraction_and_linking.py  test_canonical_structure.json  test_simplified_canonical_structure.json  visualize_langgraph.py
knowledge_graph_builder/diagrams/: detailed_architecture.mmd  langgraph_workflow.mmd  state_machine.mmd  workflow_structure.mmd
knowledge_graph_builder/models/: __init__.py  extraction_models.py  langgraph_state_models.py  neo4j_models.py  quiz_models.py
knowledge_graph_builder/output/: after_lowercasing_concepts.json  atomic.json  few-shot.json  final.json  final_viewer.html  normalized_all_concepts_gpt4o_atomic.json  normalized_all_concepts_gpt4o_new.json  normalized_all_concepts_gpt4o_v4.json  quiz_generation_thesis_report.md  test_hallucination_fix.json  test_restored_config.json
knowledge_graph_builder/prompts/: __init__.py  concept_normalization_prompts.py  enhanced_relationship_prompts.py  extraction_prompts.py  quiz_generation_prompts.py
knowledge_graph_builder/scripts/: bulk_ingest_existing_files.py  bulk_reprocess_docx_files.py  demo_simplified_approach.py  process_canonical_approach.py
knowledge_graph_builder/services/: __init__.py  embedding.py  enhanced_langgraph_service.py  extraction.py  extraction_canonical.py  extraction_langchain.py  ingestion.py  neo4j_service.py  quiz_generation_service.py
knowledge_graph_builder/synthgen/: __init__.py  __main__.py  cleanup.py  config.py  exporter.py  interaction_simulator.py  kg_extraction.py  question_generator.py  roma_lookup.py  student_generator.py
knowledge_graph_builder/unstructured_script/: 4 types of NoSQL.docx  BDA 4-1.docx  BDA 4-2.docx  BDA 4-3.docx  BDA 4-4.docx  BDA 4-5.docx  BDA 4-6.docx  BDA 5-22.docx  BDA 6-1.docx  BDA 6-2.docx  BDA 6-3.docx  BDA 6-4.docx  BDA 6-5.docx  BDA5-1.docx  BDA5-2.docx  BDA5-3.docx  BDA5-4.docx  BDA5-5.docx  BDA5-6.docx  BDA5-7.docx  BDA5-8.docx  Big data 3-1.docx  Big data 3-2.docx  Big data analysis 3-4.docx  Bigdata analysis 3-5.docx  big data analysis 3-3.docx  transcript BD 1-1 Concepts.docx  transcript BD 1-2 structured and unstructured data.docx  transcript BD 1-3 The fourth paradigm.docx  transcript BD 1-4 Big Data Characters.docx  transcript BD 1-5 lifecycle.docx  transcript BD 1-6 processing flow.docx  transcript BD 1-7 architecture.docx  transcript BD 2-1 Data resources.docx  transcript BD 2-1 resources-attack  explaination.docx  transcript BD 2-2 internal data acquisition.docx  transcript BD 2-3 external data acquisition.docx  transcript BD 2-4 deep web.docx
knowledge_graph_builder/utils/: doc_utils.py  output_utils.py  workflow_visualization.py
(+923 files in other folders)
