[project]
name = "lab-tutor-backend"
version = "0.1.0"
description = "Lab Tutor Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.123.5",
    "uvicorn[standard]",
    "sqlalchemy",
    # Postgres drivers (sync + async)
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.20",
    "bcrypt<5",
    "azure-storage-blob>=12.27.1",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "aiosqlite>=0.22.0",
    "neo4j>=6.0.0",
    "langchain-core>=0.3.27",
    "langchain-openai>=0.3.33",
    "langsmith",
    "langgraph>=0.6.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "pydantic>=2.0.0",
    "tavily-python>=0.7.17",
    "rapidfuzz>=3.14.3",
    "docx2txt>=0.9",
    "python-dotenv>=1.0.0",
    "langchain-neo4j>=0.5.0",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "openai>=1.107.1",
    "python-docx>=1.2.0",
    "pip>=25.3",
    "notebook>=7.5.3",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pypdf>=6.6.2",
    "pyvis>=0.3.2",
    "pgvector>=0.4.2",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-unstructured>=1.0.1",
    "unstructured[pdf]>=0.21.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "fpdf2>=2.8.6",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"


