[project]
name = "lab-tutor-backend"
version = "0.1.0"
description = "Lab Tutor Backend API"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "azure-storage-blob>=12.27.1",
    "bcrypt<5",
    "ddgs>=9.10.0",
    "email-validator>=2.3.0",
    "fastapi>=0.123.5",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith>=0.5.0",
    "neo4j>=6.0.3",
    "openai>=2.14.0",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "duckduckgo-search>=7.0.0",
    "tavily-python>=0.7.17",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
    "python-jobspy>=1.1.82",
    "langgraph-swarm>=0.1.0",
    "flask>=3.0",
    "torch",
    "scikit-learn>=1.8.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "fpdf2>=2.8.6",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain-neo4j>=0.8.0",
    "nbformat>=5.10.4",
    "pytest>=9.0.1",
    "rich>=14.0.0",
    "ruff>=0.8.0",
]

notebooks = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain-unstructured>=1.0.1",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "notebook>=7.5.3",
    "plotly>=6.3.1",
    "unstructured[pdf]>=0.21.5",
]

[tool.uv]
override-dependencies = [
    # python-jobspy pins numpy==1.26.3 but neo4j-graphrag/langchain need numpy>=2.0
    # jobspy works fine with numpy>=2.x despite the strict pin
    "numpy>=2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"



[tool.pytest.ini_options]
testpaths = ["tests"]
