[project]
name = "knowledge-graph-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-neo4j>=0.5.0",
    "langchain-openai>=0.3.33",
    "langextract>=1.0.9",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "openai>=1.107.1",
    "python-docx>=1.2.0",
]
